--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
         "start": "astro dev",
         "build": "astro build",
         "preview": "astro preview",
-        "astro": "astro"
+        "astro": "astro",
+        "test": "vitest run"
     },
     "dependencies": {
         "@astrojs/netlify": "^6.6.0",
         "@astrojs/react": "^4.4.0",
         "@fontsource-variable/inter": "^5.2.5",
+        "@fontsource/pretendard": "^5.2.5",
         "@netlify/blobs": "^10.5.0",
         "@netlify/functions": "^5.1.2",
         "@tailwindcss/vite": "^4.1.16",
@@ -26,9 +28,13 @@
         "unique-names-generator": "^4.7.1"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/react": "^16.3.2",
         "@types/blobshape": "^1.0.3",
         "@types/node": "^20.12.7",
         "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.2"
+        "@types/react-dom": "^19.2.2",
+        "jsdom": "^27.4.0",
+        "vitest": "^4.0.18"
     }
 }
