--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
         "@tailwindcss/vite": "^4.1.16",
         "astro": "^5.16.10",
         "blobshape": "^1.0.0",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "lucide-react": "^0.563.0",
         "marked": "^17.0.0",
         "marked-shiki": "^1.2.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.16",
         "unique-names-generator": "^4.7.1"
     },
