--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@netlify/blobs": "^10.5.0",
         "@netlify/functions": "^5.1.2",
         "@tailwindcss/vite": "^4.1.16",
+        "@tanstack/react-query": "^5.90.20",
         "astro": "^5.16.10",
         "blobshape": "^1.0.0",
         "clsx": "^2.1.1",
