--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "astro build",
         "preview": "astro preview",
         "astro": "astro",
-        "test": "vitest run"
+        "test": "vitest run",
+        "cms": "npx decap-server"
     },
     "dependencies": {
         "@astrojs/netlify": "^6.6.0",
