Feat: Add spaced repetition review email system
- Implement Leitner Box algorithm (3-box: 1/3/7 day intervals)
- Add Netlify Scheduled Function (daily 0:00 UTC = 09:00 KST)
- Store review history in Netlify Blobs
- Send review emails via Resend with 29CM-style template
- Fetch blog post list from /search.json endpoint
- Include 10 unit tests for Leitner algorithm

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "marked-shiki": "^1.2.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "resend": "^6.9.1",
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.1.16",
         "unique-names-generator": "^4.7.1"
