Fix: CMS OAuth base_url을 Netlify 도메인으로 변경
chan99k.github.io → blog.chan99k.dev

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   branch: main
   repo: chan99k/chan99k.github.io
-  base_url: https://chan99k.github.io
+  base_url: https://blog.chan99k.dev
   auth_endpoint: /oauth
 
 publish_mode: editorial_workflow
