Feat: 소개 페이지를 Content Collection 기반으로 전환
- src/content/pages/about.md 생성 (마크다운 콘텐츠 분리)
- content config에 pages 컬렉션 추가
- about.astro에서 getEntry로 콘텐츠 로드
- Decap CMS config에 페이지 컬렉션 추가 (files 타입)

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -121,3 +121,23 @@ collections:
       - label: "본문"
         name: "body"
         widget: "markdown"
+
+  - name: "pages"
+    label: "페이지"
+    files:
+      - name: "about"
+        label: "소개"
+        file: "src/content/pages/about.md"
+        fields:
+          - label: "제목"
+            name: "title"
+            widget: "string"
+
+          - label: "설명"
+            name: "description"
+            widget: "text"
+            hint: "SEO 메타 설명"
+
+          - label: "본문"
+            name: "body"
+            widget: "markdown"
