Fix: Decap CMS 이미지 경로를 public 폴더로 변경
- media_folder를 src/assets → public/images/uploads로 변경
- public_folder를 /images/uploads로 설정하여 정적 서빙 가능하게 수정
- 기존 프로젝트 이미지 경로 마이그레이션

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,8 +7,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "src/assets/images/blog"
-public_folder: "/src/assets/images/blog"
+media_folder: "public/images/uploads"
+public_folder: "/images/uploads"
 
 search: false
 
